data/derived/sp14/progs/unify/prog0295.ml.out
Characters 85-86:
  match rand 0 2 with
             ^
Error: This expression has type int but an expression was expected of type
         int * int
